Scala3/scala3-22308/java-error.txt
/root/autodl-tmp/tmp/00408e03ca498453/00409046d755f160/RARrP.java:3: error: Mls8 cannot be inherited with different arguments: <> and <N9b0hS>
public abstract class RARrP extends KdjwzN  {
                ^
1 error
